[tool.poetry]
name = "env-audit"
version = "0.1.0"
description = "A CLI tool to validate .env files against a YAML schema"
readme = "README.md"
authors = []

[tool.poetry.dependencies]
python = ">=3.10"
typer = ">=0.12"
pyyaml = ">=6.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-cov = ">=4.0"

[tool.poetry.scripts]
env-audit = "env_audit.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
